--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,49 @@
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
+repositories {
+    google()
+    mavenCentral()
+}
+
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'pdfium-android'
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    from android.sourceSets.main.java.srcDirs
+}
 
-    publishedGroupId = 'com.github.barteksc'
-    libraryName = 'PdfiumAndroid'
-    artifact = 'pdfium-android'
-
-    libraryDescription = 'Fork of library for rendering PDFs on Android\'s Surface or Bitmap'
-
-    siteUrl = 'https://github.com/barteksc/PdfiumAndroid'
-    gitUrl = 'https://github.com/barteksc/PdfiumAndroid.git'
-
-    libraryVersion = '1.9.0'
-
-    developerId = 'barteksc'
-    developerName = 'Bartosz Schiller'
-    developerEmail = 'barteksch@boo.pl'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+afterEvaluate {
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                groupId = 'com.github.awxkee'
+                artifactId = ' PdfiumAndroid'
+                version = '1.0.0'
+                from components.release
+                artifact androidSourcesJar
+            }
+        }
+    }
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 33
         versionCode 1
-        versionName "1.9.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -63,13 +62,10 @@ android {
 
 repositories {
     google()
-    jcenter()
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.21"
+    implementation "androidx.core:core-ktx:1.9.0"
 }
-
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
